[package]
name = "lofar-msstat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
ndarray = "0.16.1"
ratatui = "0.28.1"
rubbl_casatables = { version = "0.0.0-dev.0", path = "../rubbl/casatables", features = ["dysco"] }
rubbl_core = { version = "0.0.0-dev.0", path = "../rubbl/core" }
