[package]
name = "lofar-msexplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
ndarray = "0.16.1"
ratatui = "0.28.1"
rubbl_casatables = { git = "https://github.com/tikk3r/rubbl", branch="dysco-support", features = ["dysco"] }
rubbl_core = { git = "https://github.com/tikk3r/rubbl", branch="dysco-support"}
